--- a/amp-doritoto.html
+++ b/amp-doritoto.html
@@ -20,7 +20,7 @@
         <meta content='follow, all' name='yahoobot'/> 
         <meta content='follow, all' name='bingbot'/>
         <meta name="keywords" content="DORITOTO, login DORITOTO, situs DORITOTO, daftar DORITOTO, link DORITOTO">
-		    <link rel="canonical" href="https://doritotojkt.com/">
+		    <link rel="canonical" href="https://doritotovoc.com/">
 		    <link rel="shortcut icon" href="https://seo268.vip/image/logo-doritoto.png" type="image/x-icon">
 		    <link rel="icon" href="https://seo268.vip/image/logo-doritoto.png">
 		        <link rel="preload" as="image" href="https://seo268.vip/image/logo-doritoto.png"/>
