--- a/amp-doritoto.html
+++ b/amp-doritoto.html
@@ -1182,14 +1182,14 @@
 				   </div>
 				</a>
 				<div style="height: 36px; width: 3px; background: black; margin: auto"></div>
-				<a href="https://rebrand.ly/doritototop/?content=promosi" class="navbar-item">
+				<a href="https://d.cdn-268.net/doritoto" class="navbar-item">
 				   <div class="navbar-item-content">
 					  <amp-img src="https://img.viva88athenae.com//promosi.png" width="36" height="36" layout="intrinsic" alt="Promotion"></amp-img>
 					  <label>PROMOSI</label>
 				   </div>
 				</a>
 				<div style="height: 36px; width: 3px; background: black; margin: auto"></div>
-				<a href="https://wa.me/6281269226750" target="_blank" class="navbar-item">
+				<a href="https://wa.me/6281323419753" target="_blank" class="navbar-item">
 				   <div class="navbar-item-content">
 					  <amp-img src="https://img.viva88athenae.com//whatsapp.png" width="36" height="36" layout="intrinsic" alt="Nomor Whatsapp"></amp-img>
 					  <label>WHATSAPP</label>
